TSVPORTAL-11319 - Working on company email receipts create

--- a/app/views/company-receipt-create.html
+++ b/app/views/company-receipt-create.html
@@ -30,7 +30,7 @@
               <div class="form-group">
                 <label for="logoURL">Logo URL</label>
                 <input ng-model="companyReceipt.linkURL" type="text" ng-disabled="isDisabled()"
-                       class="form-control" id="logoURL" name="logoURL">
+                       maxlength="50" class="form-control" id="logoURL" name="logoURL">
               </div>
             </div>
             <div class="col-xs-12 col-sm-3">
