--- a/app/views/company-receipt-create.html
+++ b/app/views/company-receipt-create.html
@@ -65,7 +65,7 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12">
               <div class="form-group">
-                <label for="logoURL">Template</label>
+                <label for="template">Template</label>
                 <textarea ng-model="companyReceipt.template" ng-disabled="isDisabled()" rows="25" class="form-control" id="template" name="template"></textarea>
               </div>
             </div>
