--- a/app/views/company-receipt-email-list.html
+++ b/app/views/company-receipt-email-list.html
@@ -20,7 +20,7 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="emailFrom">E-mail From</label>
+                <label for="emailFrom">From</label>
                 <input ng-model="search.emailFrom" type="text" ng-disabled="isDisabled()"
                        class="form-control" id="emailFrom" name="emailFrom"
                        placeholder="user@e-mail.com">
@@ -28,7 +28,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="emailBcc">E-mail BCC</label>
+                <label for="emailBcc">BCC</label>
                 <input ng-model="search.emailBcc" type="text" ng-disabled="isDisabled()"
                        class="form-control" id="emailBcc" name="emailBcc"
                        placeholder="bcc@e-mail.com">
@@ -36,13 +36,12 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="emailSubject">E-mal Subject</label>
+                <label for="emailSubject">Subject</label>
                 <input ng-model="search.emailSubject" type="text" ng-disabled="isDisabled()"
                        class="form-control" id="emailSubject" name="emailSubject"
                        placeholder="E-mail subject">
               </div>
             </div>
-
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-8">
@@ -66,6 +65,7 @@
               </div>
             </div>
           </div>
+
         </div>
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
