--- a/app/views/company-receipt-email-create.html
+++ b/app/views/company-receipt-email-create.html
@@ -53,7 +53,7 @@
                   disable="isDisabled() || dragging"
                   required="true"
                   disable-past="true"
-                  ng-model="companyReceipt.startDate">
+                  ng-model="companyEmailReceipt.startDate">
                 </date-picker-field>
               </div>
             </div>
@@ -65,7 +65,7 @@
                   name="EffectiveEndDate"
                   label="Effective End Date"
                   disable="readOnly || shouldDisableEndDate || dragging"
-                  ng-model="companyReceipt.endDate"
+                  ng-model="companyEmailReceipt.endDate"
                   disable-past="true"
                   end-current-effective="viewEditItem && disablePastDate"
                   required="true">
@@ -110,7 +110,7 @@
         </div>
 
         <div class="panel-footer text-right">
-          <a href="#/company-receipt-list" class="btn btn-default" ng-hide="readOnly">Cancel</a>
+          <a href="#/company-receipt-email-list" class="btn btn-default" ng-hide="readOnly">Cancel</a>
           <button class="btn btn-primary" ng-click="formSave()" ng-hide="readOnly">
             <span class="fa fa-check-square-o" aria-hidden="true"></span> <span
             class="hidden-xs">Save</span>
