--- a/app/views/cash-bag-list.html
+++ b/app/views/cash-bag-list.html
@@ -70,7 +70,7 @@
 
               <div class="form-group col-xs-12 text-right">
                 <button type="button" class="btn btn-default" ng-click="hideCreatePopup()">Cancel</button>
-                <button type="button" class="btn btn-primary" ng-click="findStoreInstance()">Search</button>
+                <button type="button" class="btn btn-primary" ng-click="findStoreInstance()" id="searchStoreInstanceId">Search</button>
               </div>
             </form>
           </div>
@@ -217,7 +217,7 @@
 
       <div class="panel-footer text-right">
         <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
-        <button type="submit" class="btn btn-primary">Search</button>
+        <button type="submit" class="btn btn-primary" id="searchCashBagListId">Search</button>
       </div>
     </form>
   </div>
