--- a/app/views/cash-bag-submission.html
+++ b/app/views/cash-bag-submission.html
@@ -74,7 +74,7 @@
 
       <div class="panel-footer text-right">
         <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
-        <button type="submit" class="btn btn-primary" ng-click="searchCashBags()">Search</button>
+        <button type="submit" class="btn btn-primary" ng-click="searchCashBags()" id="searchCashBagsId">Search</button>
       </div>
     </form>
   </div>
