--- a/app/views/employee-message-list.html
+++ b/app/views/employee-message-list.html
@@ -93,7 +93,7 @@
           <button type="button" class="btn btn-default btn-search-clear" ng-click="clearSearch()">
             <span class="btn-label">Clear</span>
           </button>
-          <button type="submit" class="btn btn-primary btn-search">
+          <button type="submit" class="btn btn-primary btn-search" id="searchEmployeeMessageListId">
             <span class="fa fa-search" aria-hidden="true"></span>
             <span class="hidden-sm hidden-xs btn-label">Search</span>
           </button>
