--- a/app/views/manual-ECS.html
+++ b/app/views/manual-ECS.html
@@ -126,7 +126,7 @@
             </div>
             <div class="panel-footer text-right">
               <button type="button" class="btn btn-default" ng-click="clearPortalSearch()">Clear</button>
-              <button type="submit" class="btn btn-primary">Search</button>
+              <button type="submit" class="btn btn-primary" id="searchPortalInstancesId">Search</button>
             </div>
           </form>
           </div>
@@ -174,7 +174,7 @@
             </div>
               <div class="panel-footer text-right">
                 <button type="button" class="btn btn-default" ng-click="clearEposSearch()">Clear</button>
-                <button type="submit" class="btn btn-primary" >Search</button>
+                <button type="submit" class="btn btn-primary" id="searchEposInstancesId">Search</button>
               </div>
             </form>
           </div>
@@ -384,7 +384,7 @@
           </div>
             <div class="panel-footer text-right">
               <button type="button" class="btn btn-default" ng-click="clearAllInstancesSearch()">Clear</button>
-              <button type="submit" class="btn btn-primary">Search</button>
+              <button type="submit" class="btn btn-primary" id="searchAllECSInstancesId">Search</button>
             </div>
           </form>
         </div>
