--- a/app/views/menu-relationship-list.html
+++ b/app/views/menu-relationship-list.html
@@ -57,7 +57,7 @@
 					</div>
 					<div class="panel-footer text-right">
                         <button type="button" class="btn btn-default  btn-search-clear" ng-click="clearSearchFilters()" ng-show="search.menuId.length || search.catererStationId.length || dateRange.startDate.length || dateRange.endDate.length">Clear</button>
-                        <button type="submit" class="btn btn-primary">Search</button>
+                        <button type="submit" class="btn btn-primary" id="searchMenuRelationshipListId">Search</button>
 					</div>
 				</form>
 			</div>
