--- a/app/views/menu-rules.html
+++ b/app/views/menu-rules.html
@@ -102,7 +102,7 @@
 
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-          <button ng-disabled="!uiReady" ng-click="searchMenuRulesData()" class="btn btn-primary btn-search">
+          <button ng-disabled="!uiReady" ng-click="searchMenuRulesData()" class="btn btn-primary btn-search" id="searchMenuRulesId">
             <span class="fa fa-search" aria-hidden="true"></span>
             <span class="hidden-sm hidden-xs btn-label">Search</span>
           </button>
