--- a/app/views/station-list.html
+++ b/app/views/station-list.html
@@ -119,7 +119,7 @@
             Clear
           </button>
 
-          <button type="submit" class="btn btn-primary btn-search">
+          <button type="submit" class="btn btn-primary btn-search" id="searchStationListId">
             Search
           </button>
           
