--- a/app/views/stock-owner-item-list.html
+++ b/app/views/stock-owner-item-list.html
@@ -86,7 +86,7 @@
 
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchFilters()" ng-show="showClearButton()">Clear</button>
-          <button type="submit" class="btn btn-primary">Search</button>
+          <button type="submit" class="btn btn-primary" id="searchStockOwnerListId">Search</button>
         </div>
       </form>
     </div>
