--- a/app/views/survey-questions-list.html
+++ b/app/views/survey-questions-list.html
@@ -38,7 +38,7 @@
       </div>
       <div class="panel-footer text-right">
         <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-        <button ng-disabled="!uiReady" ng-click="searchSurveyQuestions()" class="btn btn-primary btn-search">
+        <button ng-disabled="!uiReady" ng-click="searchSurveyQuestions()" class="btn btn-primary btn-search" id="searchSurveyQuestionsListId">
           <span class="fa fa-search" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs btn-label">Search</span>
         </button>
