--- a/app/views/tax-rates.html
+++ b/app/views/tax-rates.html
@@ -108,7 +108,7 @@
           <button class="btn btn-default" ng-click="clearSearchFilters()" ng-show="showClearButton()" type="button">
             <span>Clear</span>
           </button>
-          <button class="btn btn-primary btn-search" ng-click="searchRecords()">
+          <button class="btn btn-primary btn-search" ng-click="searchRecords()" id="searchTaxRatesId">
             <span class="fa fa-search" aria-hidden="true"></span>
             <span class="hidden-sm hidden-xs btn-label">Search</span>
           </button>
