--- a/app/views/commission-data-table.html
+++ b/app/views/commission-data-table.html
@@ -53,7 +53,7 @@
         </div>
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-          <button type="submit" class="btn btn-primary">Search</button>
+          <button type="submit" class="btn btn-primary" id="searchCommissionDataId">Search</button>
         </div>
       </form>
     </div>
