--- a/app/views/company-reasoncodes-list.html
+++ b/app/views/company-reasoncodes-list.html
@@ -54,7 +54,7 @@
 		</div>
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-          <button type="submit" class="btn btn-primary">Search</button>
+          <button type="submit" class="btn btn-primary" id="searchCompanyReasonCodeId">Search</button>
         </div>
       </form>
     </div>
