--- a/app/views/discount-list.html
+++ b/app/views/discount-list.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="panel-footer text-right">
                     <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
-                    <button type="submit" class="btn btn-primary">Search</button>
+                    <button type="submit" class="btn btn-primary" id="searchDiscountListId">Search</button>
                 </div>
             </form>
         </div>
