--- a/app/views/epos-transaction-list.html
+++ b/app/views/epos-transaction-list.html
@@ -103,7 +103,7 @@
         </div>
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearch()">Clear</button>
-          <button type="submit" class="btn btn-primary">Search</button>
+          <button type="submit" class="btn btn-primary" id="searchEposTransactionListId">Search</button>
         </div>
       </form>
     </div>
