--- a/app/views/excise-duty-list.html
+++ b/app/views/excise-duty-list.html
@@ -174,7 +174,7 @@
       </div>
       <div class="panel-footer text-right">
         <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-        <button type="submit" class="btn btn-primary btn-search">Search</button>
+        <button type="submit" class="btn btn-primary btn-search" id="searchExciseDutyListId">Search</button>
       </div>
     </form>  
     </div>
