--- a/app/views/excise-duty-relationship-list.html
+++ b/app/views/excise-duty-relationship-list.html
@@ -192,7 +192,7 @@
       </div>
       <div class="panel-footer text-right">
         <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-        <button type="submit" class="btn btn-primary" >Search</button>
+        <button type="submit" class="btn btn-primary" id="searchExciseDutyRelationshipListId">Search</button>
       </div>
       </form>>
     </div>
