--- a/app/views/lmp-locations-list.html
+++ b/app/views/lmp-locations-list.html
@@ -52,7 +52,7 @@
         </div>
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-          <button type="submit" class="btn btn-primary">Search</button>
+          <button type="submit" class="btn btn-primary" id="searchLmpLocationListId">Search</button>
         </div>
       </form>
     </div>
