--- a/app/views/menu-assignment-list.html
+++ b/app/views/menu-assignment-list.html
@@ -192,7 +192,7 @@
 
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-          <button ng-disabled="!uiReady" ng-click="searchMenuAssignmentData()" class="btn btn-primary btn-search">
+          <button ng-disabled="!uiReady" ng-click="searchMenuAssignmentData()" class="btn btn-primary btn-search" id="searchMenuAssignmentId">
             <span class="fa fa-search" aria-hidden="true"></span>
             <span class="hidden-sm hidden-xs btn-label">Search</span>
           </button>
