--- a/app/views/promotion-list.html
+++ b/app/views/promotion-list.html
@@ -72,7 +72,7 @@
         <div class="panel-footer text-right">
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
-          <button type="submit" class="btn btn-primary">Search</button>
+          <button type="submit" class="btn btn-primary" id="searchPromotionListId">Search</button>
         </div>
       </form>
     </div>
