--- a/app/views/receipt-rules.html
+++ b/app/views/receipt-rules.html
@@ -19,7 +19,7 @@
 
         <button class="btn btn-default pull-right" data-toggle="collapse" data-target="#search-collapse"
                 aria-expanded="false"
-                aria-controls="search-collapse">
+                aria-controls="search-collapse" id="searchReceiptRulesId">
           <span class="fa fa-search" aria-hidden="true"></span>
           <span class="hidden-xs">Search</span>
         </button>
@@ -54,7 +54,7 @@
         </div>
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-          <button type="submit" class="btn btn-primary">Search</button>
+          <button type="submit" class="btn btn-primary" id="searchReceiptRuleListId">Search</button>
         </div>
       </form>
     </div>
