--- a/app/views/reconciliation-dashboard.html
+++ b/app/views/reconciliation-dashboard.html
@@ -53,7 +53,7 @@
           <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false"
                   aria-controls="search-collapse">
             <span class="fa fa-search" aria-hidden="true"></span>
-            <span class="hidden-sm hidden-xs">Search</span>
+            <span class="hidden-sm hidden-xs" id="searchReconciliationDashboardId">Search</span>
           </button>
         </div>
 
@@ -144,7 +144,7 @@
         </div>
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-          <button type="submit" class="btn btn-primary" ng-click="searchReconciliationDataList()">Search</button>
+          <button type="submit" class="btn btn-primary" ng-click="searchReconciliationDataList()" id="searchReconciliationDashboardListId">Search</button>
         </div>
       </form>
     </div>
