--- a/app/views/report-exchange-rate.html
+++ b/app/views/report-exchange-rate.html
@@ -53,7 +53,7 @@
             </div>
             <div class="panel-footer text-right">
                 <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-                <button type="submit" class="btn btn-primary" ng-disabled="!isSearchFormValid()">Search</button>
+                <button type="submit" class="btn btn-primary" ng-disabled="!isSearchFormValid()" id="searchReportExchangeRateId">Search</button>
             </div>
         </form>
     </div>
