--- a/app/views/schedule-list.html
+++ b/app/views/schedule-list.html
@@ -162,7 +162,7 @@
         </div>
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
-          <button type="submit" class="btn btn-primary">Search</button>
+          <button type="submit" class="btn btn-primary" id="searchScheduleListId">Search</button>
         </div>
       </form>
     </div>
