--- a/app/views/stock-take-report.html
+++ b/app/views/stock-take-report.html
@@ -67,7 +67,7 @@
       </div>
       <div class="panel-footer text-right">
         <button type="button" class="btn btn-default" ng-click="clearSearchFilters()">Clear</button>
-        <button type="submit" class="btn btn-primary" ng-click="searchRecords()">Search</button>
+        <button type="submit" class="btn btn-primary" ng-click="searchRecords()" id="searchStockTakeReportId">Search</button>
       </div>
     </form>
   </div>
