--- a/app/views/directives/qr-create.html
+++ b/app/views/directives/qr-create.html
@@ -14,7 +14,7 @@
 
 				<button class="btn button btn-success" ng-show="!formData.qrCodeImgUrl.length" ng-disabled="!formData.qrCodeValue.length" ng-click="qrCreate()">Save QR</button>
 
-				<button class="btn button btn-default" ng-show="formData.qrCodeImgUrl.length" ng-click="clearQrCodes()">Clear QR</button>
+				<button class="btn button btn-default" ng-show="formData.qrCodeImgUrl.length" ng-click="clearQrCodes()" id="clearQRId">Clear QR</button>
 
 			</div>
 
