--- a/app/views/employee-message-list.html
+++ b/app/views/employee-message-list.html
@@ -90,7 +90,7 @@
         </div>
         <div class="panel-footer text-right">
            
-          <button type="button" class="btn btn-default btn-search-clear" ng-click="clearSearch()">
+          <button type="button" class="btn btn-default btn-search-clear" ng-click="clearSearch()" id="clearEmployeeMessageListId">
             <span class="btn-label">Clear</span>
           </button>
           <button type="submit" class="btn btn-primary btn-search" id="searchEmployeeMessageListId">
