--- a/app/views/lmp-delivery-note.html
+++ b/app/views/lmp-delivery-note.html
@@ -179,7 +179,7 @@
           </div>
           <div class="col-xs-1">
             <label class="invisible hidden-xs">Clear</label>
-            <button class="btn btn-default" type="button" ng-click="clearFilter()" ng-show="showFilterByForm()">Clear</button>
+            <button class="btn btn-default" type="button" ng-click="clearFilter()" ng-show="showFilterByForm()"  id="clearLmpDeliveryNoteId">Clear</button>
           </div>
         </div>
 
