--- a/app/views/menu-list.html
+++ b/app/views/menu-list.html
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearForm()" id="clearMenuListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchMenuListId">Search</button>
         </div>
       </form>
