--- a/app/views/reconciliation-cash-bag-list.html
+++ b/app/views/reconciliation-cash-bag-list.html
@@ -207,7 +207,7 @@
       </div>
 
       <div class="panel-footer text-right">
-        <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
+        <button type="button" class="btn btn-default" ng-click="clearForm()" id="clearReconciliationCashBagListId">Clear</button>
         <button type="submit" class="btn btn-primary" id="searchReconciliationCashBagListId">Search</button>
       </div>
     </form>
