--- a/app/views/store-instance-dashboard.html
+++ b/app/views/store-instance-dashboard.html
@@ -127,10 +127,10 @@
       </div>
       <div class="panel-footer text-right">
         <button type="button" class="btn btn-default btn-search-clear"
-                ng-click="clearSearchForm()">
+                ng-click="clearSearchForm()" id="clearStoreInstanceDashboardId">
           <span class="btn-label">Clear</span>
         </button>
-        <button ng-click="searchStoreInstanceDashboardData()" class="btn btn-primary btn-search">
+        <button ng-click="searchStoreInstanceDashboardData()" class="btn btn-primary btn-search" id="searchStoreInstanceDashboardId">
           <span class="fa fa-search" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs btn-label">Search</span>
         </button>
