--- a/app/views/cash-bag-list.html
+++ b/app/views/cash-bag-list.html
@@ -216,7 +216,7 @@
       </div>
 
       <div class="panel-footer text-right">
-        <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
+        <button type="button" class="btn btn-default" ng-click="clearForm()" id="clearCashBagListId">Clear</button>
         <button type="submit" class="btn btn-primary" id="searchCashBagListId">Search</button>
       </div>
     </form>
