--- a/app/views/category-list.html
+++ b/app/views/category-list.html
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <button type="button" class="btn btn-default" ng-disabled="!showClearButton()" ng-click="clearSearch()">Clear</button>
+        <button type="button" class="btn btn-default" ng-disabled="!showClearButton()" ng-click="clearSearch()"  id="clearCategoryListId">Clear</button>
         <button type="submit" class="btn btn-primary" id="searchCategoryListId">Search</button>
       </div>
       </form>
@@ -128,8 +128,8 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearCreateForm()">Clear</button>
-          <button type="submit" class="btn btn-success"><span class="fa fa-check"></span> Save</button>
+          <button type="button" class="btn btn-default" ng-click="clearCreateForm()"  id="clearCreateCategoryId">Clear</button>
+          <button type="submit" class="btn btn-success" id="submitCreateCategoryId"><span class="fa fa-check"></span> Save</button>
         </div>
       </form>
     </div>
