--- a/app/views/commission-data-table.html
+++ b/app/views/commission-data-table.html
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearCommissionDataId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchCommissionDataId">Search</button>
         </div>
       </form>
