--- a/app/views/company-exchange-rate-edit.html
+++ b/app/views/company-exchange-rate-edit.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="panel-footer text-right">
-                <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+                <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearCompanyExchangeRateId">Clear</button>
                 <button type="submit" class="btn btn-primary" ng-disabled="!isSearchFormValid()" id="searchCompanyExchangeRateId">Search</button>
             </div>
         </form>
