--- a/app/views/company-list.html
+++ b/app/views/company-list.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
+        <button type="button" class="btn btn-default" ng-click="clearForm()" id="clearCompanyListId">Clear</button>
         <button type="submit" class="btn btn-primary" id="searchCompanyListId">Search</button>
       </div>
     </form>
