--- a/app/views/company-reasoncodes-list.html
+++ b/app/views/company-reasoncodes-list.html
@@ -53,7 +53,7 @@
 		  </div>
 		</div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearCompanyReasonCodeId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchCompanyReasonCodeId">Search</button>
         </div>
       </form>
