--- a/app/views/currency-edit.html
+++ b/app/views/currency-edit.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-right">
-                    <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
+                    <button type="button" class="btn btn-default" ng-click="clearForm()" id="clearDetailedCompanyCurrencyId">Clear</button>
                     <button type="submit" class="btn btn-primary" id="searchDetailedCompanyCurrencyId">Search</button>
                 </div>
             </form>
