--- a/app/views/directives/seal-type.html
+++ b/app/views/directives/seal-type.html
@@ -38,7 +38,7 @@
 
   <br/>
 
-  <button class="btn btn-primary" type="button" ng-show="showClearButton()" ng-click="clearSeals()">Clear</button>
+  <button class="btn btn-primary" type="button" ng-show="showClearButton()" ng-click="clearSeals()" id="clearSealTypeId">Clear</button>
 
   <div class="row" ng-show="isSequentialPossible()">
 
