--- a/app/views/discount-list.html
+++ b/app/views/discount-list.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-right">
-                    <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
+                    <button type="button" class="btn btn-default" ng-click="clearForm()" id="clearDiscountListId">Clear</button>
                     <button type="submit" class="btn btn-primary" id="searchDiscountListId">Search</button>
                 </div>
             </form>
