--- a/app/views/employee-commission-list.html
+++ b/app/views/employee-commission-list.html
@@ -139,7 +139,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
+        <button type="button" class="btn btn-default" ng-click="clearForm()" id="clearEmployeeCommissionListId">Clear</button>
         <button type="submit" class="btn btn-primary" id="searchEmployeeCommissionListId">Search</button>
       </div>
     </form>
