--- a/app/views/employee-list.html
+++ b/app/views/employee-list.html
@@ -95,7 +95,7 @@
 		 </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearEmployeeListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchEmployeeListId">Search</button>
         </div>
       </form>
