--- a/app/views/epos-transaction-list.html
+++ b/app/views/epos-transaction-list.html
@@ -102,7 +102,7 @@
 
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearch()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearch()" id="clearEposTransactionListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchEposTransactionListId">Search</button>
         </div>
       </form>
