--- a/app/views/item-list.html
+++ b/app/views/item-list.html
@@ -103,7 +103,7 @@
         </div>
 
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchFilters()" ng-show="showClearButton()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchFilters()" ng-show="showClearButton()" id="clearItemListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchItemListId">Search</button>
         </div>
       </form>
