--- a/app/views/lmp-locations-list.html
+++ b/app/views/lmp-locations-list.html
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearLmpLocationListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchLmpLocationListId">Search</button>
         </div>
       </form>
