--- a/app/views/manage-goods-received.html
+++ b/app/views/manage-goods-received.html
@@ -66,7 +66,7 @@
 
       </div>
       <div class="panel-footer text-right">
-        <button type="button" class="btn btn-default" ng-click="clearSearchFilters()">Clear</button>
+        <button type="button" class="btn btn-default" ng-click="clearSearchFilters()" id="clearManageGoodsReceivedId">Clear</button>
         <button type="submit" class="btn btn-primary" ng-click="searchRecords()" id="searchManageGoodsReceivedId">Search</button>
       </div>
     </form>
