--- a/app/views/manual-ECS.html
+++ b/app/views/manual-ECS.html
@@ -125,7 +125,7 @@
               </div>          
             </div>
             <div class="panel-footer text-right">
-              <button type="button" class="btn btn-default" ng-click="clearPortalSearch()">Clear</button>
+              <button type="button" class="btn btn-default" ng-click="clearPortalSearch()" id="clearPortalInstancesId">Clear</button>
               <button type="submit" class="btn btn-primary" id="searchPortalInstancesId">Search</button>
             </div>
           </form>
@@ -173,7 +173,7 @@
               </div>
             </div>
               <div class="panel-footer text-right">
-                <button type="button" class="btn btn-default" ng-click="clearEposSearch()">Clear</button>
+                <button type="button" class="btn btn-default" ng-click="clearEposSearch()" id="clearEposInstancesId">Clear</button>
                 <button type="submit" class="btn btn-primary" id="searchEposInstancesId">Search</button>
               </div>
             </form>
@@ -383,7 +383,7 @@
             </div>
           </div>
             <div class="panel-footer text-right">
-              <button type="button" class="btn btn-default" ng-click="clearAllInstancesSearch()">Clear</button>
+              <button type="button" class="btn btn-default" ng-click="clearAllInstancesSearch()" id="clearAllECSInstancesId">Clear</button>
               <button type="submit" class="btn btn-primary" id="searchAllECSInstancesId">Search</button>
             </div>
           </form>
