--- a/app/views/post-trip-data-list.html
+++ b/app/views/post-trip-data-list.html
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearPostTripDataListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchPostTripDataListId">Search</button>
         </div>
       </form>
