--- a/app/views/priceupdater-list.html
+++ b/app/views/priceupdater-list.html
@@ -66,7 +66,7 @@
 		  </div>
 		</div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearPriceUpdaterListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchPriceUpdaterListId">Search</button>
         </div>
       </form>
