--- a/app/views/promotion-catalog-list.html
+++ b/app/views/promotion-catalog-list.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+        <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearPromotionCatalogListId">Clear</button>
         <button type="submit" class="btn btn-primary" id="searchPromotionCatalogListId">Search</button>
       </div>
     </form>>
