--- a/app/views/promotion-category-list.html
+++ b/app/views/promotion-category-list.html
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+        <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearPromotionCategoryListId">Clear</button>
         <button type="submit" class="btn btn-primary" id="searchPromotionCategoryListId">Search</button>
       </div>
     </form>  
