--- a/app/views/promotion-list.html
+++ b/app/views/promotion-list.html
@@ -71,7 +71,7 @@
         </div>
         <div class="panel-footer text-right">
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearForm()" id="clearPromotionListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchPromotionListId">Search</button>
         </div>
       </form>
