--- a/app/views/receipt-rules.html
+++ b/app/views/receipt-rules.html
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearReceiptRuleListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchReceiptRuleListId">Search</button>
         </div>
       </form>
