--- a/app/views/reconciliation-dashboard.html
+++ b/app/views/reconciliation-dashboard.html
@@ -51,9 +51,9 @@
           </div>
 
           <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false"
-                  aria-controls="search-collapse">
+                  aria-controls="search-collapse" id="searchReconciliationDashboardId">
             <span class="fa fa-search" aria-hidden="true"></span>
-            <span class="hidden-sm hidden-xs" id="searchReconciliationDashboardId">Search</span>
+            <span class="hidden-sm hidden-xs">Search</span>
           </button>
         </div>
 
@@ -143,7 +143,7 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearReconciliationDashboardListId">Clear</button>
           <button type="submit" class="btn btn-primary" ng-click="searchReconciliationDataList()" id="searchReconciliationDashboardListId">Search</button>
         </div>
       </form>
