--- a/app/views/schedule-list.html
+++ b/app/views/schedule-list.html
@@ -161,7 +161,7 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearScheduleListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchScheduleListId">Search</button>
         </div>
       </form>
