--- a/app/views/stock-owner-item-list.html
+++ b/app/views/stock-owner-item-list.html
@@ -85,7 +85,7 @@
         </div>
 
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchFilters()" ng-show="showClearButton()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchFilters()" ng-show="showClearButton()" id="clearStockOwnerListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchStockOwnerListId">Search</button>
         </div>
       </form>
