--- a/app/views/survey-catalog.html
+++ b/app/views/survey-catalog.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearSurveyCatalogId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchSurveyCatalogId">Search</button>
         </div>
       </form>
