--- a/app/views/survey.html
+++ b/app/views/survey.html
@@ -52,7 +52,7 @@
 		  </div>
 		</div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearSurveyId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchSurveyId">Search</button>
         </div>
       </form>
