--- a/app/views/transaction-list.html
+++ b/app/views/transaction-list.html
@@ -229,7 +229,7 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearch()">Clear</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearch()" id="clearTransactionListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchTransactionListId">Search</button>
         </div>
       </form>
