--- a/app/views/company-reasoncodes-list.html
+++ b/app/views/company-reasoncodes-list.html
@@ -8,7 +8,7 @@
           <span class="fa fa-plus" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Create Company Reason Code</span>
         </button>
-        <button class="btn btn-default" aria-expanded="false" ng-click="toggleFilterPanel()">
+        <button class="btn btn-default" aria-expanded="false" ng-click="toggleFilterPanel()" id="filterCompanyReasonCodeId">
           <span class="fa fa-search" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
