--- a/app/views/employee-message-list.html
+++ b/app/views/employee-message-list.html
@@ -9,7 +9,7 @@
             <span class="fa fa-plus" aria-hidden="true"></span>
             <span class="hidden-sm hidden-xs">Create Message</span>
           </button>
-          <button class="btn btn-default" ng-click="toggleFilterPanel()">
+          <button class="btn btn-default" ng-click="toggleFilterPanel()" id="filterEmployeeMessageListId">
             <span class="fa fa-filter" aria-hidden="true"></span>
             <span class="hidden-sm hidden-xs">Filter</span>
           </button>
