--- a/app/views/menu-relationship-list.html
+++ b/app/views/menu-relationship-list.html
@@ -10,7 +10,7 @@
 				<a href="#/menu-relationship-create" ng-show="isCRUD" class="btn btn-primary btn-create">
 					<span class="fa fa-plus" aria-hidden="true"></span> <span class="btn-label hidden-xs">Create Menu Relationship</span>
 				</a>
-				<button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false" aria-controls="search-collapse">
+				<button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false" aria-controls="search-collapse" id="filterMenuRelationshipListId">
                     <span class="fa fa-filter" aria-hidden="true"></span>
 					<span class="hidden-sm hidden-xs">Filter</span>
 				</button>
