--- a/app/views/promotion-list.html
+++ b/app/views/promotion-list.html
@@ -9,7 +9,7 @@
       <div class="col-xs-8 text-right">
 
         <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false"
-                aria-controls="search-collapse">
+                aria-controls="search-collapse" id="filterPromotionListId">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
