--- a/app/views/survey.html
+++ b/app/views/survey.html
@@ -7,7 +7,7 @@
        <a href="#/survey/create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create Survey</span></a>
        <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse"
                aria-expanded="false"
-               aria-controls="search-collapse">
+               aria-controls="search-collapse" id="filterSurveyId">
         <span class="fa fa-search" aria-hidden="true"></span>
         <span class="hidden-xs">Filter</span>
        </button>
