--- a/app/views/cash-bag-list.html
+++ b/app/views/cash-bag-list.html
@@ -118,7 +118,7 @@
 
       <div class="col-xs-6 text-right">
 
-        <button class="btn btn-default" data-toggle="collapse" data-target="#searchCollapse" aria-controls="searchCollapse">
+        <button class="btn btn-default" data-toggle="collapse" data-target="#searchCollapse" aria-controls="searchCollapse" id="filterCashBagListId">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
