--- a/app/views/cash-bag-submission.html
+++ b/app/views/cash-bag-submission.html
@@ -45,7 +45,7 @@
       <div class="col-xs-6 text-right">
 
         <button class="btn btn-default" data-toggle="collapse" data-target="#searchCollapse" aria-expanded="false"
-                aria-controls="searchCollapse">
+                aria-controls="searchCollapse" id="filterCashBagsId">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
