--- a/app/views/category-list.html
+++ b/app/views/category-list.html
@@ -8,7 +8,7 @@
 
       <div class="col-xs-8 text-right">
 
-        <button class="btn btn-default" ng-click="toggleFilterPanel()">
+        <button class="btn btn-default" ng-click="toggleFilterPanel()" id="filterCategoryListId">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <button type="button" class="btn btn-default" ng-disabled="!showClearButton()" ng-click="clearSearch()"  id="clearCategoryListId">Clear</button>
+        <button type="button" class="btn btn-default" ng-disabled="!showClearButton()" ng-click="clearSearch()" id="clearCategoryListId">Clear</button>
         <button type="submit" class="btn btn-primary" id="searchCategoryListId">Search</button>
       </div>
       </form>
