--- a/app/views/currency-edit.html
+++ b/app/views/currency-edit.html
@@ -7,7 +7,7 @@
 
             <div class="col-xs-4 text-right">
                 <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false"
-                        aria-controls="search-collapse">
+                        aria-controls="search-collapse" id="filterDetailedCompanyCurrencyId">
                     <span class="fa fa-filter" aria-hidden="true"></span>
                     <span class="hidden-sm hidden-xs">Filter</span>
                 </button>
