--- a/app/views/item-list.html
+++ b/app/views/item-list.html
@@ -14,7 +14,7 @@
         </a>
 
         <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false"
-                aria-controls="search-collapse">
+                aria-controls="search-collapse" id="filterItemListId">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
