--- a/app/views/manage-goods-received.html
+++ b/app/views/manage-goods-received.html
@@ -11,7 +11,7 @@
       <div class="col-xs-6 text-right">
         <a ng-show="isCRUD && catererStationId" ng-href="/#/lmp-delivery-note/create/{{catererStationId}}" class="btn btn-primary"> + <span class="hidden-xs">Create Delivery Note</span></a>
         <button ng-show="catererStationId" class="btn btn-default"data-toggle="collapse" data-target="#search-collapse"
-          aria-expanded="false" aria-controls="search-collapse">
+          aria-expanded="false" aria-controls="search-collapse" id="filterManageGoodsReceivedId">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
