--- a/app/views/priceupdater-list.html
+++ b/app/views/priceupdater-list.html
@@ -9,7 +9,7 @@
        <a href="#/priceupdater/create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create Rule</span></a>
        <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse"
                aria-expanded="false"
-               aria-controls="search-collapse">
+               aria-controls="search-collapse" id="filterPriceUpdaterListId">
         <span class="fa fa-search" aria-hidden="true"></span>
         <span class="hidden-xs">Filter</span>
        </button>
