--- a/app/views/stock-owner-item-list.html
+++ b/app/views/stock-owner-item-list.html
@@ -8,7 +8,7 @@
       <div class="col-xs-6 text-right">
         <a href="#/stock-owner-item-create" ng-show="isCRUD" class="btn btn-primary">+<span class="hidden-sm hidden-xs"> Create Stock Owner Item</span></a>
 
-        <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false" aria-controls="search-collapse">
+        <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false" aria-controls="search-collapse" id="filterStockOwnerListId">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
