--- a/app/views/stock-take-report.html
+++ b/app/views/stock-take-report.html
@@ -17,7 +17,7 @@
         </a>
 
         <button ng-show="searchIsPossible()" class="btn btn-default"data-toggle="collapse" data-target="#search-collapse"
-          aria-expanded="false" aria-controls="search-collapse">
+          aria-expanded="false" aria-controls="search-collapse" id="filterStockTakeReportId">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
