--- a/app/views/store-instance-dashboard.html
+++ b/app/views/store-instance-dashboard.html
@@ -22,7 +22,7 @@
             <span class="hidden-sm hidden-xs">Bulk Dispatch</span>
           </button>
           -->
-          <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false" aria-controls="search-collapse">
+          <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false" aria-controls="search-collapse" id="filterStoreInstanceDashboardId">
             <span class="fa fa-filter" aria-hidden="true"></span>
             <span class="hidden-sm hidden-xs">Filter</span>
           </button>
