--- a/app/views/survey-catalog.html
+++ b/app/views/survey-catalog.html
@@ -7,7 +7,7 @@
       <a href="#/survey-catalog/create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create Survey Catalog</span></a>
       <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse"
               aria-expanded="false"
-              aria-controls="search-collapse">
+              aria-controls="search-collapse" id="filterSurveyCatalogId">
         <span class="fa fa-search" aria-hidden="true"></span>
         <span class="hidden-xs">Filter</span>
       </button>
