--- a/app/views/survey-questions-list.html
+++ b/app/views/survey-questions-list.html
@@ -6,7 +6,7 @@
 
     <div class="col-xs-8 text-right">
       <a href="#/survey-questions/create" ng-show="isCRUD" class="btn btn-primary"><span class="hidden-xs">+ Create Survey Question</span></a>
-      <button class="btn btn-default" ng-click="toggleSearchPanel()">
+      <button class="btn btn-default" ng-click="toggleSearchPanel()" id="filterSurveyQuestionsListId">
         <span class="fa fa-filter"></span>
         <span class="hidden-sm hidden-xs">Filter</span>
       </button>
