--- a/app/views/tax-rates.html
+++ b/app/views/tax-rates.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-xs-8 text-right">
         <button class="btn btn-primary" tabindex="-1" ng-show="isCRUD" ng-click="createNewTaxRate()"><span class="fa fa-plus"></span><span class="hidden-xs">  Create Tax Rate</span></button>
-        <button class="btn btn-default" tabindex="-1" data-toggle="collapse" data-target="#filter-controls" aria-expanded="false" aria-controls="search-collapse" ng-click="searchUiSelectReady()">
+        <button class="btn btn-default" tabindex="-1" data-toggle="collapse" data-target="#filter-controls" aria-expanded="false" aria-controls="search-collapse" ng-click="searchUiSelectReady()" id="filterTaxRatesId">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
