--- a/app/views/transaction-list.html
+++ b/app/views/transaction-list.html
@@ -56,7 +56,7 @@
         </div>
 
         <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false"
-                aria-controls="search-collapse">
+                aria-controls="search-collapse" id="filterTransactionListId">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
