--- a/app/views/company-receipt-list.html
+++ b/app/views/company-receipt-list.html
@@ -83,7 +83,7 @@
         </tbody>
       </table>
     </div>
-    <alert ng-show="!loadingBarVisible && companyReceipt.length == 0" type="info">
+    <alert ng-show="!loadingBarVisible && companyReceipts.length == 0" type="info">
       <span class="fa fa-flag"></span> Your search returned no results.
     </alert>
     <p ng-if="companyReceipt.length > 0" class="record-count small text-center">Showing {{companyReceipt.length}} records</p>
