TSVPORTAL-11319 - Change placeholders

--- a/app/views/company-email-receipt-list.html
+++ b/app/views/company-email-receipt-list.html
@@ -23,7 +23,7 @@
                 <label for="emailFrom">From</label>
                 <input ng-model="search.emailFrom" type="text" ng-disabled="isDisabled()"
                        class="form-control" id="emailFrom" name="emailFrom"
-                       placeholder="user@e-mail.com">
+                       placeholder="from@domain.com">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
@@ -31,7 +31,7 @@
                 <label for="emailBcc">BCC</label>
                 <input ng-model="search.emailBcc" type="text" ng-disabled="isDisabled()"
                        class="form-control" id="emailBcc" name="emailBcc"
-                       placeholder="bcc@e-mail.com">
+                       placeholder="bcc@domain.com">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
