TSVPORTAL-11319 - Fix notification bar

--- a/app/views/company-email-receipt-list.html
+++ b/app/views/company-email-receipt-list.html
@@ -116,7 +116,7 @@
     <alert ng-show="!loadingBarVisible && companyEmailReceipts.length == 0" type="info">
       <span class="fa fa-flag"></span> Your search returned no results.
     </alert>
-    <p ng-if="companyEmailReceipt.length > 0" class="record-count small text-center">Showing {{companyEmailReceipt.length}} records</p>
+    <p ng-if="companyEmailReceipts.length > 0" class="record-count small text-center">Showing {{companyEmailReceipts.length}} records</p>
     <p class="loading-more alert alert-info text-center"><i class="fa fa-spin fa-circle-o-notch"></i> Loading more...</p>
   </div>
 </div>
