--- a/app/views/company-receipt-list.html
+++ b/app/views/company-receipt-list.html
@@ -86,7 +86,7 @@
     <alert ng-show="!loadingBarVisible && companyReceipts.length == 0" type="info">
       <span class="fa fa-flag"></span> Your search returned no results.
     </alert>
-    <p ng-if="companyReceipt.length > 0" class="record-count small text-center">Showing {{companyReceipt.length}} records</p>
+    <p ng-if="companyReceipts.length > 0" class="record-count small text-center">Showing {{companyReceipts.length}} records</p>
     <p class="loading-more alert alert-info text-center"><i class="fa fa-spin fa-circle-o-notch"></i> Loading more...</p>
   </div>
 </div>
