TSVPORTAL-11319 - Fix filter

--- a/app/views/company-email-receipt-list.html
+++ b/app/views/company-email-receipt-list.html
@@ -57,9 +57,10 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" ng-model="search.emailAsAttachment" ng-disabled="isDisabled(currency)"> <strong>As Attachment</strong>
+                <label>Options</label>
+                <div>
+                  <label for="emailAsAttachment">
+                    <input type="checkbox" id="emailAsAttachment" ng-model="search.emailAsAttachment" ng-disabled="isDisabled(currency)"> As Attachment
                   </label>
                 </div>
               </div>
