TSVPORTAL-11319 - Fix filter

--- a/app/views/company-email-receipt-list.html
+++ b/app/views/company-email-receipt-list.html
@@ -59,7 +59,7 @@
               <div class="form-group">
                 <label>Options</label>
                 <div>
-                  <label for="emailAsAttachment">
+                  <label for="emailAsAttachment" style="font-weight: normal">
                     <input type="checkbox" id="emailAsAttachment" ng-model="search.emailAsAttachment" ng-disabled="isDisabled(currency)"> As Attachment
                   </label>
                 </div>
